beautified delete buttons and merged read and write onto one page.  Still can't get refresh to work

--- a/read.html
+++ b/read.html
@@ -24,7 +24,7 @@
 
         for (var i = 0; i < data.length; i++) 
         {
-          $("ol").append("<li>" + data[i] + "<button id ='" + i + "' value = 'x'></button>" + "</li>");
+          $("ol").append("<li>" + data[i] + "<button id ='" + i + "'><span class='glyphicon glyphicon-remove'></span></button>" + "</li>");
     }
       
        
